Updated with more digits trained

--- a/main.ipynb
+++ b/main.ipynb
@@ -1211,7 +1211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1279,7 +1279,7 @@
     "        ypool_lab.append(model.predict(Xpool_lda))\n",
     "\n",
     "    #get probability of label for each class based on voting in the committee\n",
-    "    ypool_p=(np.mean(np.array(ypool_lab)==1,0),np.mean(np.array(ypool_lab)==2,0),np.mean(np.array(ypool_lab)==3,0),np.mean(np.array(ypool_lab)==4,0),np.mean(np.array(ypool_lab)==5,0),np.mean(np.array(ypool_lab)==6,0),np.mean(np.array(ypool_lab)==7,0),np.mean(np.array(ypool_lab)==8,0),np.mean(np.array(ypool_lab)==9,0))\n",
+    "    ypool_p=(np.mean(np.array(ypool_lab)==0,0), np.mean(np.array(ypool_lab)==1,0),np.mean(np.array(ypool_lab)==2,0),np.mean(np.array(ypool_lab)==3,0),np.mean(np.array(ypool_lab)==4,0),np.mean(np.array(ypool_lab)==5,0),np.mean(np.array(ypool_lab)==6,0),np.mean(np.array(ypool_lab)==7,0),np.mean(np.array(ypool_lab)==8,0),np.mean(np.array(ypool_lab)==9,0))\n",
     "    ypool_p=np.array(ypool_p).T\n",
     "    #Refit model in all training data\n",
     "    model.fit(Xtrain,ytrain)\n",
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
